// Load this file using:
// var builder = ProtoBuf.loadProtoFile("face-status.proto");

package ndn_message;

// Protobuf has no "outer" message type, so we need to put the TLV FaceStatus
// message inside an outer "typeless" FaceStatusMessage.
message FaceStatusMessage {
  message FaceStatus {
    required uint64 face_id = 105;
    required string uri = 114;
    required string local_uri = 129;
    optional uint64 expiration_period = 109;
    required uint64 face_scope = 132;
    required uint64 face_persistency = 133;
    required uint64 link_type = 134;
    required uint64 n_in_interests = 144;
    required uint64 n_in_datas = 145;
    required uint64 n_in_nacks = 151;
    required uint64 n_out_interests = 146;
    required uint64 n_out_datas = 147;
    required uint64 n_out_nacks = 152;
    required uint64 n_in_bytes = 148;
    required uint64 n_out_bytes = 149;
  }

  // A FaceStatusMessage has repeated FaceStatus.
  repeated FaceStatus face_status = 128;
}
